[package]
name = "newton"
version = "0.1.0"
authors = ["Siniša Miličić <smilicic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "newton_iterate"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module", "num-complex"]

[dependencies]
num = "0.3"
